[UPDATE] Clear text

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
+    <title></title>
 </head>
 
 <body>
@@ -20,7 +21,7 @@
     <div class="general-container">
         <div class="center-container">
             <h1 class="gotham-light">R O C K T E C H</h1>
-            <p class="gotham-light"><b>rocktech.mx</b></p>
+            <p class="gotham-light"></p>
         </div>
     </div>
 </body>
