[UPDATE] Clear text

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <link rel="stylesheet" type="text/css" href="css/styles.css">
-    <title></title>
+    <title>Rocktech</title>
 </head>
 
 <body>
